to fixe scrool on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -237,13 +237,9 @@ body {
     z-index: 0;
   }
   .background {
-    background-attachment: fixed;
-    background-image: none;
-    background-size: cover;
+    background-image: url(./assets/img/desk.jpg);
     opacity: 0.4;
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
+
   }
 
   .App {
